Added more services to get public IP from and added fallback IP in case any of those work